Sun Nov 14 13:27:03 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pp.rb (PP#object_address_group): remove odd number of 'f'
	  prefixed to negative address.

Sun Nov 14 08:46:33 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/logger/test_logger.rb: Logger just expects
	  Logger#datetime_format to be used for Time#strftime independently of
	  locale. [ruby-dev:24828]

Fri Nov 12 17:32:07 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* bcc32/README.bcc32, win32/README.win32: need bison instead of
	  byacc.

Fri Nov 12 15:15:06 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (ruby_options): now we cannot call rb_glob() before
	  ruby_init(), so call rb_w32_cmdvector() at ruby_options().

	* win32.{c,h} (rb_w32_cmdvector): rename make_cmdvector() and
	  export it.

Fri Nov 12 14:08:01 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/event.rb: remove $LOADED_FEATURES trick

	* ext/tk/lib/tk.rb: ditto

Thu Nov 11 17:58:19 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (rb_glob): should have called rb_glob_caller().
	  [ruby-dev:24773]

Thu Nov 11 16:56:10 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/ruby/test_file.rb (test_truncate_wbuf): we want to test
	  only File#truncate, not behavior of seek(2).

Thu Nov 11 01:52:52 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (syserr_initialize): use stringified object.
	  [ruby-dev:24768]

Wed Nov 10 22:49:01 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/delegate.rb (SimpleDelegator::dup): wrong number of
	  arguments.

	* lib/delegate.rb (DelegateClass::dup): ditto.

Wed Nov 10 19:47:55 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_helper): path is a string object now.

Wed Nov 10 12:31:21 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* README.EXT (Example): extconf.rb is indispensable now.

Wed Nov 10 03:33:36 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: fix SEGV when compiled with Tcl/Tk8.3.x
	  or older
